# locaIden

./: CMakeLists.txt  README.md
include/: locaIden.h  usbCamera.h
src/: CMakeLists.txt  locaIden.cpp
src/iden/: CMakeLists.txt  locaIden.cpp
src/usbCamera/: CMakeLists.txt  usbCamera.cpp
test/: CMakeLists.txt  testLine.cpp  testLocaIden.cpp
